fixed box-shadow not visible when menu closed

--- a/frontend/src/styles/header.module.css
+++ b/frontend/src/styles/header.module.css
@@ -180,7 +180,7 @@
         padding-bottom: 60px;
         background-color: var(--color-background);
         transform-origin: 0% 0%;
-        transform: translate(-100%, 0);
+        transform: translate(-115%, 0);
         transition: transform 0.5s ease-in-out;
         box-shadow: 0px 4px 9px rgba(27, 26, 26, 0.25);
     }
